--- a/src/components/Pill.astro
+++ b/src/components/Pill.astro
@@ -3,11 +3,11 @@
 <style>
 	.pill {
 		display: flex;
-		padding: 0.5rem 1rem;
+		/* padding: 0.5rem 1rem; */
 		gap: 0.5rem;
 		color: var(--accent-text-over);
-		border: 1px solid var(--accent-regular);
-		background-color: var(--accent-regular);
+		/* border: 1px solid var(--accent-regular); */
+		/* background-color: var(--accent-regular); */
 		border-radius: 999rem;
 		font-size: var(--text-md);
 		line-height: 1.35;
