--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -5,13 +5,15 @@ import Icon from './Icon.astro';
 <section class="box skills">
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Full Stack</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+		<h2>Web Development</h2>
+		<p>
+			I build dynamic, scalable, and secure websites and applications from concept to deployment. I use Laravel, NodeJS, Vue, React and more.
+		</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Industry Leader</h2>
-		<p>Neque viverra justo nec ultrices dui. Est ultricies integer quis auctor elit.</p>
+		<h2>Complete Expertise</h2>
+		<p>From building robust APIs to managing cloud infrastructure, and implementing DevOps practices, I ensure your application runs smoothly.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
