Adding more icons, skills and technologies

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,5 +1,6 @@
 ---
 import Icon from './Icon.astro';
+import Technologies from './Technologies.astro';
 ---
 
 <section class="box skills">
@@ -11,14 +12,14 @@ import Icon from './Icon.astro';
 		</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
+		<Icon icon="book" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Complete Expertise</h2>
 		<p>From building robust APIs to managing cloud infrastructure, and implementing DevOps practices, I ensure your application runs smoothly.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Strategy-Minded</h2>
-		<p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p>
+		<Icon icon="puzzle-piece" color="var(--accent-regular)" size="2.5rem" gradient />
+		<h2>Problem Solver</h2>
+		<p>Strong focus on troubleshooting and optimizing code and processes.</p>
 	</div>
 </section>
 
