--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -24,8 +24,8 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[]
 <nav>
 	<div class="menu-header">
 		<a href="/" class="site-title">
-			<Icon icon="terminal-window" color="var(--accent-regular)" size="1.6em" gradient />
-			Jeanine White
+			<Icon icon="code" color="var(--accent-regular)" size="1.6em" gradient />
+			Marvin Magaña
 		</a>
 		<menu-button>
 			<template>
