--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,7 @@ import PortfolioPreview from '../components/PortfolioPreview.astro';
 // Page section components
 import ContactCTA from '../components/ContactCTA.astro';
 import Skills from '../components/Skills.astro';
+import Technologies from '../components/Technologies.astro';
 
 // Content Fetching: List four most recent work projects
 const projects = (await getCollection('work'))
@@ -34,7 +35,8 @@ const projects = (await getCollection('work'))
 					tagline="Full-Stack Web Developer. Based in San Miguel, El Salvador."
 					align="start"
 				>
-					
+				<Technologies />
+
 					<div class="cta">
 						<CallToAction href="/work/">
 							See my work
@@ -49,11 +51,6 @@ const projects = (await getCollection('work'))
 					height="380"
 					src="/assets/avatar.png"
 				/>
-				<!-- <div class="roles">
-					<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
-					<Pill><Icon icon="microphone-stage" size="1.33em" /> Speaker</Pill>
-					<Pill><Icon icon="pencil-line" size="1.33em" /> Writer</Pill>
-				</div> -->
 			</header>
 
 			<Skills />
